--- a/ELT_Network.csproj
+++ b/ELT_Network.csproj
@@ -9,8 +9,8 @@
 
 	<PropertyGroup>
 		<TargetFramework>netstandard2.1</TargetFramework>
-		<AssemblyName>ELT_Assets</AssemblyName>
-		<RootNamespace>ELT_Assets</RootNamespace>
+		<AssemblyName>ELT_Network</AssemblyName>
+		<RootNamespace>ELT_Network</RootNamespace>
 		<Description>This ELT Extension give the player acces to the cool hidden game object.</Description>
 		<Version>0.1.0</Version>
 		<AllowUnsafeBlocks>true</AllowUnsafeBlocks>
@@ -66,7 +66,7 @@
 	<ItemGroup>
 		<PackageReference Include="BepInEx.PluginInfoProps" Version="2.0.0" />
 		<PackageReference Include="HarmonyX" Version="2.10.2"></PackageReference>
-		<PackageReference Include="UnityEngine.Modules" Version="2022.3.7" IncludeAssets="compile" />
+		<PackageReference Include="UnityEngine.Modules" Version="2022.3.7" IncludeNetwork="compile" />
 	</ItemGroup>
 
 	<!-- Set the default value for BepInExVersion -->
@@ -84,7 +84,7 @@
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(BepInExVersion)' == '5'">
-		<PackageReference Include="BepInEx.Core" Version="5.4.*" IncludeAssets="compile" />
+		<PackageReference Include="BepInEx.Core" Version="5.4.*" IncludeNetwork="compile" />
 	</ItemGroup>
 
 	<PropertyGroup Condition="'$(BepInExVersion)' == '6'">
@@ -93,11 +93,11 @@
 
 	<!-- <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2"
-			PrivateAssets="all" />
+			PrivateNetwork="all" />
 	</ItemGroup> -->
 
 	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
-		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateNetwork="all" />
 	</ItemGroup>
 
 	<!--
