--- a/embedded/Localization/Localization.jsonc
+++ b/embedded/Localization/Localization.jsonc
@@ -10,8 +10,10 @@
 			"Assets.DESCRIPTION[Invisible Road Path - 1xTwoway]": "2 Direction | 1 lane Car | 2 Lane Pedestrian Road.\n\nDO NOT PLACE THIS PATH ON A GROWABLE BUILDING. THE GAME WILL CRASH WHEN THE BUILDING UPGRADES/FINISHES CONSTRUCTION/ OR IS DESTROYED.",
 			"Assets.DESCRIPTION[Invisible Road Path - 1xOneway]": "1 Direction | 1 Lane Car | 2 Lane Pedestrian Road.\n\nDO NOT PLACE THIS PATH ON A GROWABLE BUILDING. THE GAME WILL CRASH WHEN THE BUILDING UPGRADES/FINISHES CONSTRUCTION/ OR IS DESTROYED.",
 			"Assets.DESCRIPTION[Invisible Car Path - 1xOneway 1xBay]": "1 Direction | 2 lane Car Path.\n\nDO NOT PLACE THIS PATH ON A GROWABLE BUILDING. THE GAME WILL CRASH WHEN THE BUILDING UPGRADES/FINISHES CONSTRUCTION/ OR IS DESTROYED.",
-
+			
+			"SubServices.NAME[Spaces]": "Spaces and Areas",
 			"Assets.SUB_SERVICE_DESCRIPTION[Spaces]": "Spaces and Areas",
+			"SubServices.NAME[Marker Object Prefabs]": "Marker Object Prefabs",
 			"Assets.SUB_SERVICE_DESCRIPTION[Marker Object Prefabs]": "Marker Object Prefabs",
 
 			"Assets.NAME[Gympark Area]": "Gympark Area",
