--- a/embedded/Localization/Localization.jsonc
+++ b/embedded/Localization/Localization.jsonc
@@ -29,7 +29,37 @@
 			"Assets.DESCRIPTION[Gympark Area]": "An area for your citizens to work out in.",
 			"Assets.DESCRIPTION[Clear Area]": "Unknown Functionality.",
 			"Assets.DESCRIPTION[Park Area]": "An area for your citizens to enjoy nature and greenery.",
-			"Assets.DESCRIPTION[Hangaround Area]": "An area for your citizens to relax and spend time together."
+			"Assets.DESCRIPTION[Hangaround Area]": "An area for your citizens to relax and spend time together.",
+
+			"Assets.DESCRIPTION[Integrated Passenger Airplane Stop]": "An invisible passenger airplane stop.",
+			"Assets.DESCRIPTION[Integrated Passenger Ship Stop]": "An invisible passenger ship stop. Currently unable to be placed on roads.",
+			"Assets.DESCRIPTION[Integrated Cargo Ship Stop]": "An invisible cargo ship stop. Currently unable to be placed on roads.",
+			"Assets.DESCRIPTION[Integrated Cargo Train Stop]": "An invisible cargo train stop. Must be placed on train tracks.",
+			"Assets.DESCRIPTION[Integrated Passenger Train Stop]": "An invisible passenger train stop. Must be placed on train tracks.",
+			"Assets.DESCRIPTION[Integrated Subway Stop - Side]": "An invisible subway stop. Must be placed on subway tracks.",
+			"Assets.DESCRIPTION[Integrated Subway Stop - Middle]": "An invisible subway stop. Must be placed on subway tracks, creates middle platform if placed between double tracks.",
+			"Assets.DESCRIPTION[Integrated Taxi Stand]": "An invisible taxi stand. Must be placed on roads.",
+			"Assets.DESCRIPTION[Integrated Cargo Airplan Stop]": "An invisible cargo airplane stop.",
+			"Assets.DESCRIPTION[Integrated Bus Stop]": "An invisible bus stop. Must be placed on roads.",
+
+			"Assets.DESCRIPTION[Forest Animal Spawner]": "Periodically spawns forest animals such as bears, deer, etc.",
+			"Assets.DESCRIPTION[Eagle Spawner]": "Periodically spawns eagles.",
+			"Assets.DESCRIPTION[Coast Animal Spawner]": "Periodically spawns coast animals such as seagulls.",
+			"Assets.DESCRIPTION[Poultry Animal Spawner]": "Periodically spawns poultry animals such as chickens etc.",
+			"Assets.DESCRIPTION[Pultry Animal Spawner]": "Periodically spawns poultry animals such as chickens etc.",
+			"Assets.DESCRIPTION[Pig Spawner]": "Periodically spawns pigs.",
+			"Assets.DESCRIPTION[Horse Spawner]": "Periodically spawns horses.",
+			"Assets.DESCRIPTION[Cow Spawner]": "Periodically spawns cows.",
+			"Assets.DESCRIPTION[Chicken Spawner]": "Periodically spawns chickens.",
+			"Assets.DESCRIPTION[Cattle Animal Spawner]": "Periodically spawns cattle animals such as cows etc.",
+			"Assets.DESCRIPTION[Shark Spawner]": "Periodically spawns sharks. Must be placed in water.",
+			"Assets.DESCRIPTION[Sea Animal Spawner]": "Periodically spawns sea animals. Must be placed in water.",
+			"Assets.DESCRIPTION[Dolphin Spawner]": "Periodically spawns dolphins. Must be placed in water.",
+			"Assets.DESCRIPTION[Bear Spawner]": "Periodically spawns bears.",
+			"Assets.DESCRIPTION[Moose Spawner]": "Periodically spawns moose.",
+			"Assets.DESCRIPTION[Deer Spawner]": "Periodically spawns deer.",
+			"Assets.DESCRIPTION[Sheep Spawner]": "Periodically spawns sheep.",
+			"Assets.DESCRIPTION[Goose Spawner]": "Periodically spawns geese."
 		}
 	}
 }
